--- a/src/web.public/public/scripts/appakin/pages/app/app.html
+++ b/src/web.public/public/scripts/appakin/pages/app/app.html
@@ -1,84 +1,84 @@
 <div id="app" class="main-wrapper" ng-cloak>
-    <p class="error" ng-show="app.data.serverError">
+    <p class="error" ng-if="::app.data.serverError">
         <span class="icon"></span>There was a problem getting the app details. Please try again, or if the problem persists please try later.
     </p>
-    <div class="no-error-wrapper" ng-if="!app.data.serverError">
-        <h1>{{app.data.censoredName}}</h1>
+    <div class="no-error-wrapper" ng-if="::!app.data.serverError">
+        <h1>{{::app.data.censoredName}}</h1>
         <div class="sidebar">
-            <a class="app-icon-wrapper" href="{{ app.data.storeUrl }}" target="{{ getLinkTarget() }}">
-                <img class="app-icon" ng-src="{{ url.createAppleAppStoreImageUrl(app.data.artworkMediumUrl, 175) }}">
+            <a class="app-icon-wrapper" href="{{::app.data.storeUrl}}" target="{{::getLinkTarget()}}">
+                <img class="app-icon" ng-src="{{::url.createAppleAppStoreImageUrl(app.data.artworkMediumUrl, 175)}}">
             </a>
             <div class="basic-info">
-                <p class="price highlighted">{{app.data.price | formatPrice}}</p>
-                <!--<div class="rating sidebar-section" ng-if="app.data.userRatingCurrent && app.data.ratingCountCurrent >= 5">-->
-                    <!--<h6>CURRENT RATING</h6>-->
-                    <!--<div akin-score score="app.data.userRatingCurrent" votes="app.data.ratingCountCurrent"></div>-->
-                <!--</div>-->
-                <div class="rating sidebar-section" ng-if="app.data.userRatingCurrent">
+                <p class="price highlighted">{{::app.data.price | formatPrice}}</p>
+                <div class="rating sidebar-section" ng-if="::app.data.userRatingCurrent">
                     <h6>CURRENT RATING</h6>
-                    <div ng-if="app.data.ratingCountCurrent >= 5"
-                         akin-score score="app.data.userRatingCurrent" votes="formatVoteCount(app.data.ratingCountCurrent)"></div>
-                    <p ng-if="app.data.ratingCountCurrent < 5">&nbsp;&mdash;</p>
+                    <div ng-if="::app.data.ratingCountCurrent >= 5"
+                         akin-score
+                         score="app.data.userRatingCurrent"
+                         votes="formatVoteCount(app.data.ratingCountCurrent)"></div>
+                    <p ng-if="::app.data.ratingCountCurrent < 5">&nbsp;&mdash;</p>
                 </div>
-                <div class="rating sidebar-section" ng-if="app.data.userRating && app.data.ratingCount >= 5">
+                <div class="rating sidebar-section"
+                     ng-if="::app.data.userRating && app.data.ratingCount >= 5">
                     <h6>OVERALL RATING</h6>
-                    <div akin-score score="app.data.userRating" votes="formatVoteCount(app.data.ratingCount)"></div>
+                    <div akin-score
+                         score="app.data.userRating"
+                         votes="formatVoteCount(app.data.ratingCount)"></div>
                 </div>
                 <div class="age-rating single-line-sidebar-section">
                     <h6>AGE RATING</h6>
-                    <p>{{app.data.advisoryRating}}</p>
+                    <p>{{::app.data.advisoryRating}}</p>
                 </div>
                 <div class="ios-version single-line-sidebar-section">
                     <h6>iOS VERSION</h6>
-                    <p>{{app.data.minOsVersion}}+</p>
+                    <p>{{::app.data.minOsVersion}}+</p>
                 </div>
                 <div class="supported-devices sidebar-section">
-                    <span class="device tag-border" ng-repeat="device in getSupportedDevices(app.data.supportedDevices)">{{device}}</span>
+                    <span class="device tag-border"
+                          ng-repeat="device in ::getSupportedDevices(app.data.supportedDevices)">{{device}}</span>
                 </div>
-                <a class="download-button" href="{{ app.data.storeUrl }}" target="{{ getLinkTarget() }}">
-                    <!-- Do fallback: <img src="image.svg" onerror="this.onerror=null; this.src='image.png'">-->
+                <a class="download-button" href="{{::app.data.storeUrl}}" target="{{::getLinkTarget()}}">
                     <img src="/images/app-store-badge.svg">
                 </a>
             </div>
         </div>
         <div class="body-wrapper">
             <div class="mobile-download-button">
-                <a class="download-button" href="{{ app.data.storeUrl }}" target="{{ getLinkTarget() }}">
-                    <!-- Do fallback: <img src="image.svg" onerror="this.onerror=null; this.src='image.png'">-->
+                <a class="download-button" href="{{::app.data.storeUrl}}" target="{{::getLinkTarget()}}">
                     <img src="/images/app-store-badge.svg">
                 </a>
             </div>
             <div class="screen-shots-positioning-wrapper">
                 <div class="description">
-                    <div ng-show="display.fullDescription">
-                        <p class="body-text" ng-bind-html="app.data.description | formatDescription"></p>
+                    <div ng-if="display.fullDescription">
+                        <p class="body-text" ng-bind-html="::app.data.description | formatDescription"></p>
                     </div>
-                    <div ng-hide="display.fullDescription">
+                    <div ng-if="!display.fullDescription">
                         <p class="body-text" ng-bind-html="app.data.firstSection | formatDescription"></p>
                         <a class="more-button never-underline" href ng-click="toggleFullDescription()"
-                           ng-hide="app.data.firstSection === app.data.description"><span></span></a>
+                           ng-if="!(app.data.firstSection === app.data.description)"><span></span></a>
                     </div>
                 </div>
                 <div class="screen-shots">
                     <div class="iphone-screen-shots"
-                         ng-if="app.data.screenShotUrls.length > 0">
+                         ng-if="::app.data.screenShotUrls.length > 0">
                         <h2>SCREENSHOTS</h2>
                         <div class="screen-shot-wrapper img-border">
                             <ul rn-carousel rn-carousel-buffered rn-carousel-indicator rn-carousel-control>
-                                <li ng-repeat="screenShotUrl in app.data.screenShotUrls">
-                                    <img ng-src="{{screenShotUrl}}" nopin="nopin">
+                                <li ng-repeat="screenShotUrl in ::app.data.screenShotUrls">
+                                    <img ng-src="{{::screenShotUrl}}" nopin="nopin">
                                 </li>
                             </ul>
                         </div>
                         <p class="label">iPhone Screenshots</p>
                     </div>
                     <div class="ipad-screen-shots"
-                         ng-if="app.data.screenShotUrls.length == 0 && app.data.ipadScreenShotUrls.length > 0">
+                         ng-if="::app.data.screenShotUrls.length == 0 && app.data.ipadScreenShotUrls.length > 0">
                         <h2>iPAD SCREENSHOTS</h2>
                         <div class="screen-shot-wrapper img-border">
                             <ul rn-carousel rn-carousel-buffered rn-carousel-indicator rn-carousel-control>
-                                <li ng-repeat="screenShotUrl in app.data.ipadScreenShotUrls">
-                                    <img ng-src="{{screenShotUrl}}" nopin="nopin">
+                                <li ng-repeat="screenShotUrl in ::app.data.ipadScreenShotUrls">
+                                    <img ng-src="{{::screenShotUrl}}" nopin="nopin">
                                 </li>
                             </ul>
                         </div>
@@ -86,19 +86,19 @@
                     </div>
                 </div>
             </div>
-            <div class="app-categories" ng-if="app.data.categories.length > 0">
+            <div class="app-categories" ng-if="::app.data.categories.length > 0">
                 <h2>CATEGORY CHARTS</h2>
                 <ul>
-                    <li ng-repeat="category in app.data.categories">
-                        <h4>#123 in <a class="body-link underline-on-hover" href="{{ url.createCategoryUrl(app.data.platform, category.url) }}">{{category.name}}</a></h4>
+                    <li ng-repeat="category in ::app.data.categories">
+                        <h4>#{{category.position}} in <a class="body-link underline-on-hover" href="{{::url.createCategoryUrl(app.data.platform, category.url)}}">{{::category.name}}</a></h4>
                     </li>
                 </ul>
             </div>
             <div class="technical-info">
                 <h2>DETAILS</h2>
-                <p class="seller"><span class="label">By</span>&nbsp;{{app.data.sellerName}}</p>
-                <p class="language"><span class="label">Size</span>&nbsp;{{formatSize(app.data.fileSizeBytes)}}</p>
-                <p class="last-updated"><span class="label">First Released</span>&nbsp;{{formatDate(app.data.releaseDate)}}</p>
+                <p class="seller"><span class="label">By</span>&nbsp;{{::app.data.sellerName}}</p>
+                <p class="language"><span class="label">Size</span>&nbsp;{{::formatSize(app.data.fileSizeBytes)}}</p>
+                <p class="last-updated"><span class="label">First Released</span>&nbsp;{{::formatDate(app.data.releaseDate)}}</p>
             </div>
         </div>
     </div>
