try at home page subtitle

--- a/src/web.public/public/scripts/appakin/search/akin-searchinput.html
+++ b/src/web.public/public/scripts/appakin/search/akin-searchinput.html
@@ -12,6 +12,9 @@
             autocorrect="off"/>
     </div>
     <div class="button-wrapper" ng-show="hasFocus && searchParam">
+        <!--<div class="clear-button" ng-mousedown="clear($event)">-->
+            <!--<span class="icon"></span>-->
+        <!--</div>-->
         <button class="clear-button" type="button" ng-mousedown="clear($event)" tabindex = "-1">
             <span class="icon"></span>
         </button>
