prepared pages for ios only state

--- a/src/web.public/public/scripts/appakin/pages/home/home.html
+++ b/src/web.public/public/scripts/appakin/pages/home/home.html
@@ -1,20 +1,18 @@
 <div id="home-page" ng-class="{ extended: autocompleteFocused }">
-    <img class="akin-logo" alt="appAkin" src="/images/appakin-logo-dark.svg">
-    <p class="subtitle">Find your next app!</p>
-    <!--<p class="subtitle">&ldquo;find your next app&rdquo;</p>-->
-    <div class="platform-static">
-        <div class="platform-img-wrapper android">
-            <img class="platform-img" src="/images/google-play.svg">
-            <img class="soon-overlay" src="/images/soon.svg">
-        </div>
-        <div class="platform-img-wrapper ios">
-            <img class="platform-img" src="/images/app-store.svg">
-        </div>
-        <div class="platform-img-wrapper winphone last">
-            <img class="platform-img" src="/images/windows-phone-store.svg">
-            <img class="soon-overlay" src="/images/soon.svg">
-        </div>
-    </div>
+    <img class="akin-logo" alt="appAkin" src="/images/appakin-logo-dark-home-page.svg">
+    <!--<div class="platform-static">-->
+        <!--<div class="platform-img-wrapper android">-->
+            <!--<img class="platform-img" src="/images/google-play.svg">-->
+            <!--<img class="soon-overlay" src="/images/soon.svg">-->
+        <!--</div>-->
+        <!--<div class="platform-img-wrapper ios">-->
+            <!--<img class="platform-img" src="/images/app-store.svg">-->
+        <!--</div>-->
+        <!--<div class="platform-img-wrapper winphone last">-->
+            <!--<img class="platform-img" src="/images/windows-phone-store.svg">-->
+            <!--<img class="soon-overlay" src="/images/soon.svg">-->
+        <!--</div>-->
+    <!--</div>-->
     <div id="searchbox-home" akin-searchbox-home></div>
 </div>
 <footer akin-footer></footer>
