--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <base href="/">
 
-	<title data-ng-bind="pageTitle.pageTitle">appAkin</title>
+	<title data-ng-bind="pageTitle.pageTitle">appAkin - Search for iPhone and iPad apps</title>
 
 	<!-- TODO: add Open Graph meta tags, and possibly Twitter and Google+ too. -->
 
