--- a/src/web.public/public/scripts/appakin/pages/about/about.html
+++ b/src/web.public/public/scripts/appakin/pages/about/about.html
@@ -2,13 +2,24 @@
     <div class="about-sections-wrapper">
         <div class="about-section">
             <h2>
-                We want to be your &lsquo;go to&rsquo; service for app discovery!
+                A better way to find apps that are relevant to you!
             </h2>
             <img src="/images/about-service.svg">
             <p>
-                We created this service to help you find great apps.
-                We all love discovering new apps, but we think it&apos;s harder than it should be
-                to find the best ones for you.
+                We want to help you find great apps.
+                With so many available, it&apos;s hard to find the best ones.
+                Our goal is to make finding the right apps for you as easy as possible.
+            </p>
+        </div>
+        <div class="about-section">
+            <h2>
+                It&apos;s all about the categories!
+            </h2>
+            <img src="/images/about-categories.svg">
+            <p>
+                Enter a phrase and search across hundreds of categories.
+                We give you the most relevant results, organized by category and
+                presented in a clean, clutter-free way.
             </p>
         </div>
         <div class="about-section">
@@ -17,22 +28,9 @@
             </h2>
             <img src="/images/about-to-come.svg">
             <p>
-                We&apos;ve got big plans for how we can give you a great experience.
-                As part of this, we need interested people to help us.
-                Check out <a href="/raters">this page</a> for more information!
-            </p>
-        </div>
-        <div class="about-section">
-            <h2>
-                Other stores are coming!
-            </h2>
-            <img src="/images/about-stores.svg">
-            <p>
-                At the moment you can use our site to search for apps in the Apple App Store.
-                Soon we&apos;ll also allow you to search for apps in the Google Play&trade; store
-                and the Windows Store.
-                <!--<br/>-->
-                <!--<span class="trademark">Google Play is a trademark of Google Inc.</span>-->
+                We think we offer an excellent app search experience, but we have big ideas
+                for how we can make it even better. Watch this space&mdash;thing&apos;s
+                are going to get interesting!
             </p>
         </div>
         <div class="about-section">
@@ -48,7 +46,7 @@
     <div class="contact-details">
         <div class="contact-details-section">
             <p class="e-mail">
-                <a class="e-mail" href="mailto:hello@appakin.com">hello@appakin.com</a>
+                <a class="e-mail" target="_blank" href="mailto:hello@appakin.com">hello@appakin.com</a>
             </p>
             <ul class="social-media-links">
                 <li><a href="https://www.facebook.com/pages/AppAkin/1468571630089537" class="facebook never-underline" target="_blank"></a></li>
@@ -58,7 +56,7 @@
         <div class="contact-details-section">
             <p class="address">
                 APPAKIN LTD<br/>
-                MWB Business Exchange<br/>
+                MWB Essential<br/>
                 Regal House<br/>
                 70 London Road<br/>
                 Twickenham<br/>
