--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -55,6 +55,7 @@
     <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="/bower_components/angular-touch/angular-touch.js"></script>
     <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="/bower_components/angular-cache/dist/angular-cache.js"></script>
     <!-- inject:appakin-scripts --><script src="/scripts/app-scripts.js"></script><!-- endinject -->
 </body>
 </html>
