--- a/src/web.public/index.html
+++ b/src/web.public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 	<meta name="language" content="english">
-    <meta name="description" content="Search by category for great iOS apps.">
+    <meta name="description" content="A better way to find iPhone and iPad apps that are relevant to you. Search across hundreds of categories and get results that help you.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <base href="/">
 
