better search box focus and other fixes

--- a/src/web.public/public/scripts/appakin/pages/about/about.html
+++ b/src/web.public/public/scripts/appakin/pages/about/about.html
@@ -6,8 +6,8 @@
             </h2>
             <img src="/images/about-service.svg">
             <p>
-                We want to help you find great apps.
-                With so many available, it&apos;s hard to find the best ones.
+                With so many apps available, it&apos;s hard to
+                find the best ones and keep up with what&apos;s new.
                 Our goal is to make finding the right apps for you as easy as possible.
             </p>
         </div>
@@ -18,7 +18,7 @@
             <img src="/images/about-categories.svg">
             <p>
                 Enter a phrase and search across hundreds of categories.
-                We give you the most relevant results, organized by category and
+                We give you the most relevant results, simply organized and
                 presented in a clean, clutter-free way.
             </p>
         </div>
